--- a/resources/css/components/sections/about-section.css
+++ b/resources/css/components/sections/about-section.css
@@ -16,6 +16,11 @@
   margin-bottom: 12px;
 }
 
+/* type */
+#cta-block a {
+  color: var(--color-white);
+}
+
 #skills h3 {
   border-bottom: 1px solid var(--color-dark-grey);
   line-height: 2.8;
