--- a/resources/css/variables.css
+++ b/resources/css/variables.css
@@ -32,8 +32,14 @@
 }
 
 /* end of: Global Variables */
+   /* definining specific colours */
+body {
+   /* background-color: var(--color-black); */
+}
 
-
+section, nav {
+   background-color: #FFF;
+}
 
 /* Global Structure Elements */
 
